--- a/wm_accounting_internal_transfer/views/account_payment_views.xml
+++ b/wm_accounting_internal_transfer/views/account_payment_views.xml
@@ -4,7 +4,7 @@
         <record id="view_account_payment_form_inherit_internal" model="ir.ui.view">
             <field name="name">view.account.payment.form.inherit.internal</field>
             <field name="model">account.payment</field>
-            <field name="inherit_id" ref="account.view_account_payment_form"/>
+            <field name="inherit_id" ref="base_accounting_kit.view_account_payment_form"/>
             <field name="arch" type="xml">
 
                 <field name="payment_type" position="before">
@@ -56,7 +56,7 @@
         <record id="view_account_payment_search_inherit" model="ir.ui.view">
             <field name="name">view.account.payment.search.inherit</field>
             <field name="model">account.payment</field>
-            <field name="inherit_id" ref="account.view_account_payment_search"/>
+            <field name="inherit_id" ref="base_accounting_kit.view_account_payment_search"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='journal_id']" position="after">
                     <field name="is_internal_transfer"/>
