--- a/wm_accounting_internal_transfer/views/account_payment_views.xml
+++ b/wm_accounting_internal_transfer/views/account_payment_views.xml
@@ -3,7 +3,7 @@
     <record id="view_account_payment_form_internal_transfer" model="ir.ui.view">
         <field name="name">account.payment.form.internal.transfer</field>
         <field name="model">account.payment</field>
-        <field name="inherit_id" ref="base_accounting_kit.view_account_payment_form"/>
+        <field name="inherit_id" ref="account.view_account_payment_form"/>
         <field name="arch" type="xml">
 
             <xpath expr="//group" position="inside">
